# lab13_2021_base

./: .gitignore  README.md  pyproject.toml
lab13_2021_base/: client.py  server.py
protobuf/: sample.proto
tests/: test_lab13_2021_base.py
